# ChangeLog for app-office/calligra
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.24 2012/03/18 09:12:12 scarabeus Exp $

  18 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/calligra-2.3.85-asneeded.patch:
  Remove unused patch.

  24 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.87.ebuild, calligra-9999.ebuild:
  Add requirement that words needs tables, bug 403001

  24 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.87.ebuild, +files/calligra-2.3.87-koabstr.patch:
  Build koabstraction only if possible, bug 402655

  24 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.86.ebuild, calligra-2.3.87.ebuild, calligra-9999.ebuild:
  Remove old; block also krita, bug 405275

*calligra-2.3.87 (07 Feb 2012)

  07 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +calligra-2.3.87.ebuild, +files/calligra-2.3.87-marble.patch:
  Version bump

  22 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.85.ebuild, calligra-2.3.86.ebuild, calligra-9999.ebuild:
  Remove old; restrict tests, bug 394273

*calligra-2.3.86 (07 Jan 2012)

  07 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.84.ebuild, +calligra-2.3.86.ebuild, calligra-9999.ebuild,
  metadata.xml:
  Version bump

  22 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-2.3.83.ebuild:
  Remove old

  11 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  calligra-2.3.85.ebuild, +files/calligra-2.3.85-asneeded.patch:
  Fix build with tests enabled

*calligra-2.3.85 (10 Dec 2011)

  10 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +calligra-2.3.85.ebuild, calligra-9999.ebuild:
  Version bump

*calligra-2.3.84 (20 Nov 2011)

  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +calligra-2.3.84.ebuild:
  Version bump

*calligra-2.3.83 (29 Oct 2011)
