@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX calligra-2.3.87-koabstr.patch 1136 RMD160 393a97976d28a5743e108df621f8bd6f93565c62 SHA1 e90722a174718c96221beb2f7ef4ff01ad116397 SHA256 ee3af9bc928ecc3ec03caaac2acf48cb5af05e5e0a3c6e3ee896e87a2573456a
 AUX calligra-2.3.87-marble.patch 1169 RMD160 671458c9889b8f90bffc7d3e5e19e78d4ba31892 SHA1 10a73f5fb282cb03a995b59d0e155e633dca9e6f SHA256 523563109957fcdc72518961f86c6faadd9d8ef1dfeef4c32effe86d332c818d
 DIST calligra-2.3.87.tar.bz2 123191120 RMD160 b10cbd7c553e34c014ad14f5e4272061ec3ad93d SHA1 d398e78c553c4d512c57236a92732765aa82abc5 SHA256 3bdda4c35eb467f7599eef3d4fd4712be157846dc16a873cd9d3afc1b99839ab
-EBUILD calligra-2.3.87.ebuild 5855 RMD160 d19b5912e9113d93f0f000f1c78edbcba9ce3a9c SHA1 5de9a93ac4056efe8d71942555be75608e3d13e5 SHA256 bece040d78ff638ec923d0ed03fc4f10a33cd9d34ea4b3799ab3aad84da663a5
-EBUILD calligra-9999.ebuild 5773 RMD160 d8806b28eeda545fa29c2ee39a00ea631543524f SHA1 06797da8337f0ff928ff7a2049939885e83859d5 SHA256 12d46cc969ccc56932e1172c679b2caecc52eabb8457b79046c6f98398a69d5e
-MISC ChangeLog 4179 RMD160 324f4af712b69c0b5bfb67688553bfb865a1a5bf SHA1 bc7f0ab707e97b83432975c088f8af2ad828aabf SHA256 131210237cc106a06b5fa93547ae3aafd7e7a194eb7db4518e7ea2a2f748bc99
+EBUILD calligra-2.3.87.ebuild 5916 RMD160 89565f45d98919ba971f318695aba2596e6d622a SHA1 90b9b9b69cb6af1b4f1608d6b92a269c4b610799 SHA256 8433a4f7c9b7d36cfeb64206167a97574c8ac1ed5bb83d7754ab43195ceead13
+EBUILD calligra-9999.ebuild 5835 RMD160 de5f7eb76123721974deadefc118d9d62428db30 SHA1 3c947c8a87a0d991b2e6a9d7af025ec819713e5a SHA256 fb69e32334a6d5e010b0ae3d396dcf3bdfe76a346f0dab49213d5dbf502cf1d9
+MISC ChangeLog 4333 RMD160 1f21aa8e8a87473580bc25a9a8db906a184e73fb SHA1 92bd589d45a682e172e39e561c0e7033c39060a6 SHA256 4f49abe61d1e58cfed0a16e5164f9820f942d80fe896a912cca26521f80615c9
 MISC metadata.xml 1491 RMD160 f8ff74f843ae8df2be457f5376f8d1ad08604c09 SHA1 56f2b25dfd6524b43aed66a177a515e80f04cde2 SHA256 9e6668563b25b690da423ea91dbac27e6289ee117cb6cb026c2657c476555c69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPZabxAAoJEOSiRoyO7jvo5vMP/Rc8Ur/9p1qkFpmbBVXhalfR
-gxIpDjiSzylYL7YjgC5sin9rYhwXVW5P+sqI67r0r75r4AEtz9aYyOWcz18d6sJ5
-ux914IBv1U43vOU5XNXI8D5hFEFQOZMBPVwoY2PJouwTzMCaWVT8tOhi/j3uzeIy
-juYNj488fz93jqe5SKO0toc5ecfyPOhhHmGaGFcAV+sGraYJu7+qwT/V1E2tQN0D
-vtcvncewTQ9KB5oZUrOUtcphIlFw2myOrdt41gmnuMnNrHKxYWknvO81pul86V4k
-HjQ6w0bxdSTHTmZacVQp5bLmbl9BIRQOABDkUEF5a5J9YIw266vfK6o9pPi2VGV6
-0t3JbXtk81hfYRPxRwfE0myYf4aTBcgnF6X8Sv5k7Dr1YcTWpoKORQwUFoYGVd87
-KPK3znq4obLLhFqyWHUYhLYdb8A/+jdMYVI81ymNnwh4Ya2oDqh+z52ZFdGe2EOF
-aCb/RMPfwHrDOk62KDXl13+mk8vOw7GgBIcj9URUg10mZw5Jzhoi2hBPdaWJEVTd
-+9kYOtWtyoKD1PW1u4p4tSVXAG/Iut2wpAjKQT1crXGXhl0oFhsO5A95/fFEZmzl
-Z7jR7xnWNprQK2oQfbbzIWSTxiWnKU9zFQNO9kKCRNtum+ErwQO7Wvvf07z2NiTq
-8Ngq7QyWWep6i25z8aIX
-=y2xR
+iQIcBAEBCgAGBQJPaEB5AAoJEEb+UGWnxTyHqpYQAIZ88VwUmqknDGIOh8z1yiHN
+DrtslsTHD5C8bVHk61gfGeiz91maz9aDwDffbbWst+/1HV+xjmhng7jFH21PYH0t
+01o2E/g82PEZgZkL7x5JJCtUorHVPbuNTCUCgbzuxddQVDzWWcsMy8QIZUatj0Zh
+XOzUioL+l7yyWrRWRuSpN6QYWgBAeaSb/Vq785XCBrHm71gmXG1pFDVDbyv8u6gX
+z2fAa4f16V+DMXJOqR/9pfdJkqHhRwLprvbOQctW7ObBi6xk/A4Oaqrowp0VC6x/
+lPtlBOvBYLXt0ojFLMbNc1r0G1fUTPn778vmdKkd1uC/3n+8RJaaHRzF/TpWwBlB
+RHLcdAUZ92lMOGgBckk7+SpAGt/92otbsy6xp+x3UdXl1CRIscYvIx2XrcuJfp4E
++TL9qKkQ3RQJYQfxxq+qnda5g4V5qJkMMNTrf8eAVvwp33JBzI4Ed0YxAW2uIXen
+IOLnEd3PTgMdqJvpm1fMFnLvDyVq/eRJV+L8AZtpHEV3IbugeYtLrR36b12M+pB5
+zdL5Ojq2ai7EVCqI/nu6vnA11AYoRvh8mAcBZPdF6QeE3lLJEb8Amk5DNOltCM03
+mD6ZLvc0NCglGI9UcLTkDVmuhGwy4dH49r+iwR2aDkRoGWHCQIV23dqRWFyxlLty
+LB4KBvoxcDWCyYVZ5gca
+=rfR3
 -----END PGP SIGNATURE-----
