@@ -1,6 +1,10 @@
 # ChangeLog for app-office/calligra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.24 2012/03/18 09:12:12 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.25 2012/03/20 08:31:42 dilfridge Exp $
+
+  20 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  calligra-2.3.87.ebuild, calligra-9999.ebuild:
+  Require semantic-desktop for plan, bug 405939
 
   18 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org>
   -files/calligra-2.3.85-asneeded.patch:
